[add]: added swagger docs dor add_song and delete_song
